# Sem2_lab6

Lab6/: CMakeLists.txt  Lab6.h  main.cpp
Lab6/Polinoms/: CMakeLists.txt  Polynomial.h  Terms.cpp  Terms.h
Lab6/Polinoms/MyVector/: CMakeLists.txt  MyVector.cpp  MyVector.h
